building ok again -- going to refactor Node rotation and rebalance to be object oriented

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,8 @@
-/target
+**/.*.*.swp
+archive
+bld
+target
+pkg
+data.bin
+data.json
 tags
-
-
-#Added by cargo
-#
-#already existing elements were commented out
-
-#/target
