--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,8 @@ edition = "2018"
 log = "0.4"
 
 [dev-dependencies]
+quickcheck = "0.9"
+quickcheck_macros = "0.9"
 test-env-log = "0.2.2"
 env_logger = "0.7"
 pretty_env_logger = "0.3"
